--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/carousel.css">
 </head>
 <body>
   <app-root></app-root>
+  <script src="./assets/js/jquery-3.5.1.slim.min.js"></script>
+  <script src="./assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
